--- a/Arijit.html
+++ b/Arijit.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document
+    </title>
+    <script type="text/javascript">
+        var num1 = prompt("enter");
+ 
+ if (num1==1){
+     console.log("this is neither prime nor composite")
+ }else if(num1<1){
+     console.log("this is not a prime no.")
+ }else{
+     for(var i = 2 ; i<num1; i++ ){
+         
+         if (num1%i==0){
+           var res = this is not a prime no;
+             break;
+         }else{
+             var res = this is a prime no;
+         }
+     }
+ console.log(res);
+ } 
+     </script>
 </head>
 <body>
     <P>This is a paragraph</P>
